--- a/src/Pages/Panel/Panel.css
+++ b/src/Pages/Panel/Panel.css
@@ -1,10 +1,12 @@
 .panel-section{
     display: flex;
-    height: 800px;
+    height: 100%;
+    min-height: 80vh;
     width: 100%;
     background-color: darkgreen;
     border-radius: var(--my-radious);
     overflow: hidden;
+    border: 1px black solid;
 }
 .panel-menu-container{
     display: flex;
@@ -25,6 +27,7 @@
     width: 1200px;
     background-color: white;
     flex: 4;
+    padding: 2rem;
 }
 .panel-menu-ul{
     display: flex;
